fix cleanup annotations state and bumps (#37)